# puls-g3

./: CHANGELOG.md  Cargo.toml  README.md  build-release.sh  puls.desktop
debian/: changelog  control  copyright  rules
src/: config.rs  error_logger.rs  language.rs  main.rs  system_service.rs  types.rs  utils.rs
src/gui/: config.rs  containers.rs  cpu.rs  dashboard.rs  disks.rs  global_stats.rs  gpu.rs  logs.rs  memory.rs  mod.rs  network.rs  process_detail.rs  processes.rs  sensors.rs  services.rs  style.rs  system.rs
src/monitors/: container_monitor.rs  gpu_monitor.rs  mod.rs  system_monitor.rs
